# Multi-Modal-Neural-Interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
gui/: README.md  app.py  controller.py  index.py  model.py  requirements.txt  view.py
gui/components/: tabmenu.py
gui/components/tabs/: connections.py  plot.py  recording.py
src/: main.c  nrf5340port.c
